mgr/dashboard: fix stretched rh logo in expand cluster
Resolves: rhbz#2314622

--- a/src/pybind/mgr/dashboard/frontend/src/redhat/rh_overrides.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/redhat/rh_overrides.scss
@@ -1155,6 +1155,10 @@ h3 {
 
 // cluster expansion wizard
 cd-create-cluster {
+  .img-fluid {
+    height: auto !important;
+  }
+
   .blank-page {
     margin-top: -10rem;
   }
